2008-10-23  David Teller  <David.Teller@univ-orleans.fr>

	* Makefile: [DEST_TOP] added
	
	* src/core/batteries_core_threads.ml: [Help] removed

	* src/main/threads/batteries.ml: [Help] removed

	* src/main/nothreads/batteries.ml: [Help] removed

	* src/core/batteries_core.ml: [Help] removed

	* src/core/extlib/IO.mli: [write_u*] documented

	* myocamlbuild.ml: removed unused variables

	* src/core/toolchain.mlpack: [Batteries_help] removed

	* src/main/threads/batteries.mllib: removed useless modules

	* src/main/nothreads/batteries.mllib: removed useless modules

	* src/main/nothreads/batteries.ml: moved [Printexc] to [Control]

	* src/core/extlib.mlpack: [ExtPrintexc] added

	* src/core/batteries_core.ml: [ExtPrintexc.Printexc] replaces baselib [Printexc]

	* src/core/extlib/extPrintexc.ml*: added

	* src/core/toolchain/batteries_help.ml: [register] now catches and prints exceptions

	* src/core/baselib/batlib_Baselib_Printexc.mli: Fixed documentation typo.

	* src/syntax/pa_batteries/_tags: [debug] added

	* src/syntax/pa_batteries/pa_batteries.ml: [top_phrase], [top_phrase_next] added

	* src/core/extlib/ref.mli: [protect] added

	* src/syntax/pa_where/pa_where.ml: in [expr], [test_where_let] is now unused

	* top.ml: created

	* bocaml: created

	* build/odoc_generator_batlib.ml: in [generate_external_index] added special case for types

	* src/core/toolchain/batteries_help.ml: [auto_register] created

	* src/core/batteries_config.ml*: created

	* src/core/extlib/extPrintf.mli: Fixed documentation typo.

	* config.pre: created

	* Makefile: [BROWSER], [instdoc] added

2008-10-22  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/toolchain/batteries_help.ml: Added directives

	* src/syntax/pa_batteries/pa_batteries.ml: removed [Toolchain.Help]

	* src/core/toolchain/batteries_help.ml*: [help_*] added

	* src/core/toolchain/batteries_help.ml*: [help] added

	* src/core/toolchain/batteries_help.ml: [register] now uses [Scanf.scanf]
